--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,5 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "rewrites": [{
-    "source": "/:path*",
-    "destination": "/index.html"
-  }]
+  "rewrites": [
+    { "source": "/:path*", "destination": "/index.html" }
+  ]
 }
