--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/aos": "^3.0.7",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
